--- a/tests/playground.html
+++ b/tests/playground.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Blockly Playground</title>
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <script src="../blockly_uncompressed.js"></script>
 <script src="../generators/javascript.js"></script>
 <script src="../generators/javascript/logic.js"></script>
